これからクラスにも対応するよー！

--- a/css/app.css
+++ b/css/app.css
@@ -4,19 +4,23 @@ html, body {
   margin: 0;
   padding: 0; }
 
-#fuwat {
-  width: 100%;
-  height: 100%; }
-
-h1 {
+h1, h2 {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  margin: auto;
+  margin: auto; }
+
+h1 {
   width: 545px;
-  height: 40px; }
+  height: 40px;
+  top: -300px; }
+
+h2 {
+  width: 545px;
+  height: 40px;
+  top: 160px; }
 
 .fuwatText {
   display: block;
