--- a/css/scss/app.scss
+++ b/css/scss/app.scss
@@ -13,19 +13,29 @@ html,body{
   }
 }
 
-#fuwat{
-	width: 100%;
-	height: 100%;
-}
-h1{
+// .fuwat{
+// 	width: 100%;
+// 	height: 100%;
+// }
+%box{
 	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	margin: auto;
+}
+h1{
+	@extend %box;
 	width: 545px;
 	height: 40px;
+	top: -300px;
+}
+h2{
+	@extend %box;
+	width: 545px;
+	height: 40px;
+	top: 160px;
 }
 .fuwatText{
 	display: block;
